# tasks_management_app

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose-monitoring-prod.yml  docker-compose-monitoring.yml  docker-compose-prod.yml  prometheus.yml  setup_monitoring.sh
backend/: .dockerignore  .gitignore  Dockerfile  admin.py  admin_panel_auth.py  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/admin_panel/: .dockerignore  Dockerfile  pyproject.toml  streamlit_admin.py
backend/admin_panel/services/: users.py
backend/admin_panel/ui/: users.py
backend/alembic/: env.py
backend/alembic/versions/: 0e85c2b42317_add_auth_provider_to_users_table.py  25b96b78df0a_change_user_model_picture_field_to_.py  47cd350658c4_add_notification_id_field_in_task_model.py  8b7260e6a74a_change_in_user_model_relations.py  9cc823410592_initial_migration.py  cf44fa43a567_initial_database_schema.py
backend/app/: main.py
backend/app/core/: config.py  cookies.py  security.py
backend/app/db/: database.py
backend/app/models/: accounts.py  tasks.py
backend/app/routers/: accounts.py  auth.py  tasks.py
backend/app/services/: user_service.py
backend/core/: config.py  cookies.py  security.py
backend/db/: database.py
backend/models/: accounts.py  tasks.py  users.py
backend/postman/: env_tasks_app.postman_environment.json  tasks-app.postman_collection.json
backend/routers/: accounts.py  admin_users.py  auth.py  health.py  home.py  tasks.py  users.py
backend/schemas/: accounts.py  auth.py  tasks.py  users.py
backend/scripts/: wait-for-db.py
backend/services/: task_services.py  user_service.py
backend/templates/sqladmin/: custom_details.html  custom_edit.html  custom_list.html
frontend/: .gitignore  app.json  env-loader.js  i18n.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
monitoring/: alertmanager.yml  prometheus.yml  prometheus_alerts.yml
(+92 files in other folders)
