[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "argon2-cffi>=25.1.0",
    "fastapi[all]>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pip>=25.2",
    "psycopg[binary,c]>=3.2.9",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pip>=25.2",
]
